--- a/stylesheets/sass/jkr/_icons.scss
+++ b/stylesheets/sass/jkr/_icons.scss
@@ -47,3 +47,21 @@
 .i-chat-2:before {
   content: "c";
 }
+.i-check:before {
+  content: "d";
+}
+.i-check-1:before {
+  content: "e";
+}
+.i-facebook-circle:before {
+  content: "f";
+}
+.i-twitter-circle:before {
+  content: "g";
+}
+.i-instagram-circle:before {
+  content: "h";
+}
+.i-at:before {
+  content: "i";
+}
